Update role mining feature 1. Various changes to the role mining structures and process. 2. Added ability to analyze 100% similarity